# bimi-preview

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  SECURITY.md  app.py  bimi.py  docker-compose.override.example.yml  docker-compose.yml  llm.py  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
templates/: index.jinja2.html  preview.jinja2.html  prompt.jinja2.html
tests/: test_bimi.py
